# reliability-simulator

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: chaos.py  circuit_breaker.py  main.py  metrics.py  models.py  retry.py  simulator.py
frontend/: app.js  index.html  styles.css
tests/: test_breaker.py  test_retry.py  test_simulator.py
